# factor_analysis_project

./: .gitignore  README.md  setup.cfg  setup.py  template.html
demo/: demo.py
factor_analysis/: backtest.py  factor.py  factor_calc.py  markdown_writer.py  optimize.py  performance.py  plot.py  postprocess.py  risk.py  summary.py  utils.py
factor_analysis_output/: summary.html  summary.md
factor_analysis_output/RandomGenerated1/: config.json
factor_analysis_output/RandomGenerated1/factor1/: factor1_report.html  factor1_report.md
factor_analysis_output/RandomGenerated1/factor2/: factor2_report.html  factor2_report.md
factor_analysis_output/RandomGenerated1/open/: open_report.html  open_report.md
factor_analysis_output/RandomGenerated2/: config.json
factor_analysis_output/factor1/: factor1_report.html  factor1_report.md
factor_analysis_output/factor1_factor4/: factor1_factor4_report.md
factor_analysis_output/factor2/: factor2_report.html  factor2_report.md
factor_analysis_output/factor2_factor4/: factor2_factor4_report.md
factor_analysis_output/factor2_factor4_factor3/: factor2_factor4_factor3_report.md
factor_analysis_output/factor3/: factor3_report.html  factor3_report.md
factor_analysis_output/factor4/: factor4_report.html  factor4_report.md
factor_analysis_output/factor5/: factor5_report.md
factor_analysis_output/factor6/: factor6_report.md
factor_analysis_output/open/: open_report.html  open_report.md
factor_analysis_output/open_factor1/: open_factor1_report.html  open_factor1_report.md
(+6 files in other folders)
