[metadata]
name = factor_analysis

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
install_requires =
    pandas == 1.3.5
    numpy == 1.22.1
    matplotlib == 3.3.4
    seaborn == 0.11.1
    tqdm == 4.59.0
    scipy == 1.6.2
    tabulate == 0.9.0
    markdown == 3.4.3
    pyppeteer == 1.0.2
    bs4 == 0.0.1

[options.packages.find]
include = factor_analysis*